--- a/Security/main.tex
+++ b/Security/main.tex
@@ -6,7 +6,7 @@
 \title{CCNA Security}
 \date{\today}
 \begin{document}
-\titleAT{CCNA}
+\titleAT{CCNA Security}
 \thispagestyle{empty}{\tableofcontents}
 \listofcodes
 
@@ -18,5 +18,7 @@
 \include{6-SecuringLAN}
 \include{7-VPN}
 \include{8-ASA}
+\include{9-ASDM}
+\include{10-VPN-in-ASA}
 
 \end{document}
